# rust-burger-web

./: Cargo.toml  README.md  env.sh
migrations/2021-06-25-051652_create_burgers/: down.sql  up.sql
src/: auth.rs  main.rs  models.rs  pool.rs  routes.rs  schema.rs
